tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0188/input.js
function hello() {'use strict'; try { } catch (arguments) { } }
